--- a/style.css
+++ b/style.css
@@ -3,9 +3,9 @@ button.relative{
     position: relative;
     left: 20px;
     top: 10px;
-    padding: 5px 10px;
+    padding: 5px 8px;
     margin: 5px 5px;
-    display: inline-block;
+    border-radius: 5px;
 }
 div.obj{
     position: relative;
@@ -18,4 +18,18 @@ button.obj{
     padding: 5px;
     margin: 5px;
     display: inline-block;
+}
+p.objhead{
+    text-align: center;
+    background-color: #360559;
+    color: white;
+    border: 2px;
+    border-radius: 5px;
+    
+}
+p.gL{
+    border-inline-start: solid; 
+    border-inline-color: rgb(7, 236, 7);
+    text-align: right;
+    font-size: 16px;
 }
