--- a/style.css
+++ b/style.css
@@ -1,4 +1,10 @@
 body {padding : 0; margin: 0;}
+div.divMain{
+    position:absolute; 
+    top: 80px;
+    left: 0px;
+    align-items: left;
+}
 button.relative{
     position: relative;
     left: 20px;
@@ -32,4 +38,17 @@ p.gL{
     border-inline-color: rgb(7, 236, 7);
     text-align:center;
     font-size: 16px;
+}
+div.rEL{
+    position:relative;
+    left: 1120px;
+    width: 250px;
+    height: 500px;
+    top:50px; 
+    margin: 2px;             
+}
+p.lrEL{
+    text-align: center;
+    border-inline-start: solid;
+    border-inline-color: rgb(7,236,7);
 }
