--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p.objhead{
     color: white;
     border: 2px;
     border-radius: 5px;
-    
+    font-size: 18px;
 }
 p.gL{
     border-inline-start: solid; 
